--- a/Account/Register.cshtml
+++ b/Account/Register.cshtml
@@ -8,13 +8,23 @@
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Register";
 
+    /* 
+        EMAIL: williamgo@sample.com
+        PASSWORD: samplepassword
+    */ 
+
     // Initialize general page variables
+    var username = "";
     var email = "";
+    var confirmEmail = "";
     var password = "";
     var confirmPassword = "";
 
     // Setup validation
+    Validation.RequireField("userName", "Please enter your username");
     Validation.RequireField("email", "You must specify an email address.");
+    Validation.Add("confirmEmail",
+        Validator.EqualsTo("email", "Email and confirmation email do not match."));
     Validation.RequireField("password", "Password cannot be blank.");
     Validation.Add("confirmPassword",
         Validator.EqualsTo("password", "Password and confirmation password do not match."));
@@ -27,7 +37,9 @@
     // If this is a POST request, validate and process data
     if (IsPost) {
         AntiForgery.Validate();
+        username = Request.Form["username"];
         email = Request.Form["email"];
+        confirmEmail = Request.Form["confirmEmail"];
         password = Request.Form["password"];
         confirmPassword = Request.Form["confirmPassword"];
 
@@ -44,8 +56,14 @@
             // Check if user already exists
             var user = db.QuerySingle("SELECT Email FROM UserProfile WHERE LOWER(Email) = LOWER(@0)", email);
             if (user == null) {
-                // Insert email into the profile table
-                db.Execute("INSERT INTO UserProfile (Email) VALUES (@0)", email);
+                // Insert email and username into the profile table
+              //  db.Execute("INSERT INTO UserProfile (Email) VALUES (@0)", email);
+                db.Execute("INSERT INTO UserProfile (Email, UserName) VALUES (@0, @1)", email,username);
+                var userResult = db.QuerySingle("SELECT * FROM UserProfile WHERE LOWER(Email) = LOWER(@0)", email);
+                var roleResult = db.QuerySingle("SELECT RoleId FROM webpages_Roles WHERE RoleName=@0","Member");
+                db.Execute("INSERT INTO webpages_UsersInRoles (UserId,RoleId) Values (@0,@1)", userResult.UserId,roleResult.RoleId);
+
+
 
                 // Create and associate a new entry in the membership database.
                 // If successful, continue processing the request
@@ -96,11 +114,23 @@
     <fieldset>
         <legend>Registration Form</legend>
         <ol>
+            <li class="userName">
+                <label for="username" @if(!ModelState.IsValidField("username")) {<text>class="error-label"</text>}>Username</label>
+                <input type="text" id="username" name="username" value="@username" @Validation.For("username") />
+                @*Write  any username validation errors to the page *@
+                @Html.ValidationMessage("username");
+            </li>
             <li class="email">
                 <label for="email" @if(!ModelState.IsValidField("email")){<text>class="error-label"</text>}>Email address</label>
                 <input type="text" id="email" name="email" value="@email" @Validation.For("email") />
                 @* Write any email validation errors to the page *@
                 @Html.ValidationMessage("email")
+            </li>
+            <li class="confirm-email">
+                <label for="confirmEmail" @if(!ModelState.IsValidField("confirmEmail")) {<text>class="error-label"</text>}>Confirm email</label>
+                <input type="text" id="confirmEmail" name="confirmEmail" @Validation.For("confirmEmail") />
+                @* Write any password validation errors to the page *@
+                @Html.ValidationMessage("confirmEmail")
             </li>
             <li class="password">
                 <label for="password" @if(!ModelState.IsValidField("password")) {<text>class="error-label"</text>}>Password</label>
@@ -124,7 +154,7 @@
                         Register for reCAPTCHA keys at <a href="http://recaptcha.net">reCAPTCHA.net</a>.
                     </p>
                 </div>
-                @*
+                @* 
                 @ReCaptcha.GetHtml("PUBLIC_KEY", theme: "white")
                 @Html.ValidationMessage("recaptcha")
                 *@
