--- a/Account/UpdateProfile.cshtml
+++ b/Account/UpdateProfile.cshtml
@@ -6,17 +6,16 @@
 
     <!-- WORK WITH DATA -->
     var db = Database.Open("StarterSite");
-    var userId = UrlData[0];
+    var name = UrlData[0];
 
-    if(userId.IsEmpty()) {
+    if(name.IsEmpty()) {
         Response.Redirect(@Href("~/Account/EditProfile"));
     }
 
-    var selectQueryString = "SELECT * FROM UserProfile WHERE UserId=@0";
-    var row = db.QuerySingle(selectQueryString, userId);
+    var selectQueryString = "SELECT * FROM UserProfile WHERE UserName=@0";
+    var row = db.QuerySingle(selectQueryString, name);
 
     var username = row.UserName;
-    var email = row.Email;
 
     if (IsPost) {
        username = Request["username"];
@@ -24,16 +23,12 @@
            ModelState.AddError("username","Username name is required");
        }
 
-       email = Request["email"];
-       if (String.IsNullOrEmpty(email)) {
-           ModelState.AddError("email","Email is required");
-       }
 
        // insert data into database
        if (ModelState.IsValid) {
-           var updateQueryString = "UPDATE UserProfile SET UserName=@0, Email=@1 WHERE UserId=@2";
-            db.Execute(updateQueryString,username,email,userId);
-            Response.Redirect(@Href("~/Account/MyProfile.cshtml"));
+           var updateQueryString = "UPDATE UserProfile SET UserName=@0 WHERE UserName=@1";
+           db.Execute(updateQueryString,username,name);
+           Response.Redirect(@Href("~/Account/MyProfile.cshtml"));
        }
     }
     
@@ -54,11 +49,7 @@
                 <div>
                     <label for="username">Username</label>
                     <input type="text" name="username" value="@username">
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" value="@email">
-                </div>
+                </div> 
                 <input type="submit" value="Update Profile">
             </fieldset>
         </form>
